sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:67: error: not found: value cherchePasjoueur
    deplace(currBase, cherchePasjoueur(couleur, currTrou));
                      ^SelectBaseball:74: error: not found: value nbPos
  for (i <- 0 to nbPos-1)
                 ^SelectBaseball:83: error: not found: value nbPos
  for (i <- 0 to nbPos-1)
                 ^